feat(web-fe/dishes): create dishes list view
